Fixed path issue when loading rom. Now accesses byte code and adds to memory correctly.