@@ -1,14 +1,17 @@
 
 package com.willtkelly;
 
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.io.IOException;
+import java.io.InputStream;
 
 public class RomLoader {
 
     public static byte[] loadRom(String path) throws IOException {
-        return Files.readAllBytes(Path.of(path));
+        try (InputStream is = ClassLoader.getSystemResourceAsStream(path)) {
+            if (is == null) {
+                throw new IOException("Resource not found: " + path);
+            }
+            return is.readAllBytes();
+        }
     }
-
 }
